fix entry-meta layout on small resolutions

--- a/assets/scss/components/_card.scss
+++ b/assets/scss/components/_card.scss
@@ -327,6 +327,7 @@ $cards-gutter: $gutter;
 		.touch & {
 			position: static;
 			opacity: 1;
+			overflow: hidden;
 		}
 	}
 		.entry-time {
